fixed about me shadow, its got no gap now

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body {
     margin-top: 8px;
 	pointer-events: none;
 	text-align: center;
-	text-shadow: 1px 5px 0px #045f9a;
+	text-shadow: 0px 3px 0px #045f9a;
 	user-select: none;
 	width: 400px;
 	box-shadow: 0px 3px 4px rgb(44, 44, 44);
